--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">StuffNGo</string>
+    <string name="txt_LogScreen_SignIn">Sign In</string>
+    <string name="txt_LogScreen_Username">Username</string>
+    <string name="txt_LogScreen_Pwd">Password</string>
+    <string name="txt_LogScreen_btn">Sign In</string>
+    <string name="txt_LogScreen_ForgotPwd">Forgot Password?</string>
+    <string name="txt_LogScreen_CreateAcc">Create Account</string>
 </resources>
