Linhas nos Detalhes de Encomenda
-> Linhas nos detalhes das encomendas a funcionar corretamente.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,6 @@
     <string name="txtEstado">Estado:</string>
     <string name="txtDataEncomenda">Data de Encomenda:</string>
     <string name="txtMorada">Morada:</string>
+    <string name="Nome_Linha">Nome :</string>
+    <string name="Qunatidade_Linha">Quantidade :</string>
 </resources>
