Change Encomendas Btn

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="email">Email</string>
     <string name="moradas">Moradas</string>
     <string name="editar_perfil">Editar Perfil</string>
-    <string name="alterar_password">Alterar Password</string>
+    <string name="hist_encomendas">Encomendas</string>
     <string name="save">Guardar</string>
     <string name="Username">User</string>
     <string name="cancel">Cancelar</string>
