--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,7 +70,7 @@
     <string name="txt_produto_add">Produto adicionado</string>
     <string name="txt_cart_updated">Carrinho actualizado</string>
     <string name="txt_compra_concluida">Compra concluida com sucesso!</string>
-    <string name="txt_empty_cart">A sua encomenda foi concluida com sucesso!</string>
+    <string name="txt_empty_cart">Carrinho vazio</string>
     <string name="txt_sub_total">Sub-total:</string>
     <string name="txt_no_value">$0.00</string>
     <string name="txt_iva">Iva:</string>
