--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,15 +11,14 @@
     <string name="tira_senha">Tira Senha Secção: %1$s</string>
     <string name="seccao_senhas">Senhas Digitais</string>
     <string name="carrinho_nav">carrinho</string>
-    <string name="txt_LogScreen_SignIn">Sign In</string>
-    <string name="txt_LogScreen_Username">Username</string>
+    <string name="txt_LogScreen_SignIn">Login</string>
+    <string name="txt_LogScreen_Username">Utilizador</string>
     <string name="txt_LogScreen_Pwd">Password</string>
-    <string name="txt_LogScreen_btn">Sign In</string>
-    <string name="txt_LogScreen_ForgotPwd">Forgot Password?</string>
+    <string name="txt_LogScreen_btn">Login</string>
     <string name="txt_LogScreen_CreateAcc">Create Account</string>
     <string name="profile">Perfil</string>
-    <string name="profile_picture">Profile Picture</string>
-    <string name="default_username">Username</string>
+    <string name="profile_picture">Imagem de perfil</string>
+    <string name="default_username">Utilizador</string>
     <string name="default_email">teste@teste.pt</string>
     <string name="edit_profile">Editar Perfil</string>
     <string name="nome">Nome</string>
